--- a/index.html
+++ b/index.html
@@ -9,58 +9,130 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
+    <!-- Additional CSS must be placed after Bootstrap CSS-->
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" />
+
     <title>Ruthless Clark</title>
 </head>
 
 <body>
+    <!-- navbar -->  
+    <nav class="navbar navbar-expand-lg fixed-top ">  
+        <a class="navbar-brand" href="#">Ruth Clark</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">  
+            <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse " id="navbarSupportedContent">     
+            <ul class="navbar-nav mr-4">
+                <li class="nav-item">
+                    <a class="nav-link" data-value="about" href="#">About</a></li>  
+                <li class="nav-item">
+                    <a class="nav-link " data-value="portfolio"href="#">Portfolio</a></li> 
+                <li class="nav-item"> 
+                    <a class="nav-link " data-value="contact" href="#">Contact</a></li> 
+            </ul> 
+       </div>
+    </nav>
 
-    <header>
-        <div>
-            <h1>About Me</h1>
+    <header class="header">
+            <img src="/img/pgh_landscape.jpg" class="img-fluid" alt="Responsive image">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="description">
+                <h1>Hello ,Welcome To Ruth's Page
+                <p>cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non    proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>   
+                <button class="btn btn-outline-secondary btn-lg">See more</button>   
+                </h1>  
+            </div>
         </div>
     </header>
 
-    <div>
-        <h2>Stuff</h2>
-        <h3>More Stuff</h3>
-        <p>Etc!</p>
+    <div class="row"> 
+        <div class="about col-lg-4 col-md-4 col-sm-12" id="about">
+            <img src="/img/my_pic1.png" class="img-fluid">
+            <span class="text-justify">Support Engineer</span>
+        </div>
+        <div class="col-lg-8 col-md-8 col-sm-12 desc">
+            <h3>Ruth Clark</h3>
+                <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        </div>
     </div>
 
-    <div>
-        <h2>Stuff</h2>
-        <h3>More Stuff</h3>
-        <p>Etc!</p>
+    <!-- portfolio -->
+<div class="portfolio" id="portfolio">
+        <h1 class="text-center">Portfolio</h1>
+    <div class="container">
+     <div class="row">
+      <div class="col-lg-4 col-md-4 col-sm-12">
+       <img src="/img/placeholder.webp" class="img-fluid">
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-12">
+       <img src="/img/placeholder.webp" class="img-fluid">
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-12">
+       <img src="/img/placeholder.webp" class="img-fluid">
+      </div>
+         
+   <div class="col-lg-4 col-md-4 col-sm-12">
+       <img src="/img/placeholder.webp" class="img-fluid">
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-12">
+       <img src="/img/placeholder.webp" class="img-fluid">
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-12">
+       <img src="/img/placeholder.webp" class="img-fluid">
+      </div>
+         
+   <div class="col-lg-4 col-md-4 col-sm-12">
+       <img src="/img/placeholder.webp" class="img-fluid">
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-12">
+       <img src="/img/placeholder.webp" class="img-fluid">
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-12">
+       <img src="/img/placeholder.webp" class="img-fluid">
+      </div>
+     </div>
     </div>
+   </div>
 
-
-    <footer>
-        <div>
-            <h5>Links</h5>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Sites</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-        <div>
-            <h5>Social</h5>
-            <a href="http://instagram.com/">Instagram</a>
-            <a href="http://facebook.com/">Facebook</a>
-            <a href="http://twitter.com/">Twitter</a>
-            <a href="http://youtube.com/">YouTube</a>
-        </div>
-        <div>
-            Tel: 1-206-555-1234<br />
-            Email: campsites@nucamp.co
-        </div>
-    </footer>
+   <!-- Contact form -->
+<div class="contact-form" id="contact">
+    <div class="container">
+        <form>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <h1>Get in Touch</h1> 
+                </div>
+                    <div class="col-lg-8 col-md-8 col-sm-12 right">
+                        <div class="form-group">
+                            <input type="text" class="form-control form-control-lg" placeholder="Your Name" name="">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control form-control-lg" placeholder="YourEmail@email.com" name="email">
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control form-control-lg"></textarea>
+                        </div>
+                            <input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
+                    </div>
+            </div>
+        </form>
+    </div>
+</div>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script type="text/javascript" src='js/main.js'></script>
 </body>
 
 </html>
